purchaer retunr updated

--- a/KGERP/Views/WareHouse/GCCLWareHousePOReceivingSlave.cshtml
+++ b/KGERP/Views/WareHouse/GCCLWareHousePOReceivingSlave.cshtml
@@ -196,6 +196,7 @@
                                                 <th class="center">Total Received</th>
                                                 <th>Return Quantity</th>
                                                 <th class="center">Remaining Quantity</th>
+                                                <th class="center">Unit</th>
                                             </tr>
                                         </thead>
                                         @{
@@ -212,6 +213,7 @@
                                                     <td>@item.PriviousReceivedQuantity</td>
                                                     <td>@item.ReturnQuantity</td>
                                                     <td>@item.RemainingQuantity</td>
+                                                    <td>@item.UnitName</td>
                                                 </tr>
                                             }
                                         </tbody>
