--- a/KGERP/Views/WareHouse/WareHousePOSlaveReceivingDetailsByPO.cshtml
+++ b/KGERP/Views/WareHouse/WareHousePOSlaveReceivingDetailsByPO.cshtml
@@ -70,6 +70,7 @@
                                     <th style="text-align:center;">Return Quantity</th>
                                     <th style="text-align:center;">Remaining Quantity</th>
                                     <th style="text-align:center;">Loss Quantity</th>
+                                    <th style="text-align:center;">Unit</th>
                                 </tr>
                             </thead>
 
@@ -87,6 +88,7 @@
                                         <td style="text-align:center;">@item.ReturnQuantity</td>
                                         <td style="text-align:center;">@item.RemainingQuantity</td>
                                         <td style="text-align:center;">@item.StockLossQuantity</td>
+                                        <td style="text-align:center;">@item.UnitName</td>
                                     </tr>
                                 }
                             </tbody>
