--- a/KGERP/Views/PurchaseReturn/PurchaseReturnProcess.cshtml
+++ b/KGERP/Views/PurchaseReturn/PurchaseReturnProcess.cshtml
@@ -276,6 +276,7 @@
                                         <tr>
                                             <th>Material/Item Name</th>
                                             <th>Return Quantity</th>
+                                            <th>Unit</th>
                                             <th>Return Rate</th>
                                             <th>Total Amount</th>
                                             @if (Model.IsSubmited == false)
@@ -290,15 +291,10 @@
 
                                             <tr>
                                                 <td>@item.CatagoryName - @item.SubCatagoryName - @item.ProductName </td>
-                                                <td>
-                                                    @item.Qty
-                                                </td>
-                                                <td>
-                                                    @item.Rate
-                                                </td>
-                                                <td>
-                                                    <b> @item.TotalRate  </b>
-                                                </td>
+                                                <td> @item.Qty</td>
+                                                <td> @item.UnitName</td>
+                                                <td>@item.Rate</td>
+                                                <td><b> @item.TotalRate  </b></td>
                                                 @if (Model.IsSubmited == false)
                                                 {
                                                     <td>
@@ -314,7 +310,7 @@
                                     <tfoot>
                                         <tr>
                                             <th></th>
-                                            <th colspan="2" style="text-align:right ;padding-right:10px"> Total Amount :</th>
+                                            <th colspan="3" style="text-align:right ;padding-right:10px"> Total Amount :</th>
                                             <th> @Model.GrossAmount</th>
                                             @if (Model.IsSubmited == false)
                                             {
