--- a/KGERP/Views/WareHouse/WareHousePOReceivingSlaveReport.cshtml
+++ b/KGERP/Views/WareHouse/WareHousePOReceivingSlaveReport.cshtml
@@ -249,6 +249,7 @@
                         <th style="text-align: center">Received Quantity</th>
                         <th style="text-align: center">Total Received Quantity</th>
                         <th style="text-align: center">Remaining Quantity</th>
+                        <th style="text-align: center">Unit</th>
                     </tr>
 
                     @foreach (var item in Model.DataListSlave)
@@ -260,6 +261,7 @@
                             <td style="text-align: center">@item.ReceivedQuantity</td>
                             <td style="text-align: center">@item.PriviousReceivedQuantity</td>
                             <td style="text-align: center">@item.RemainingQuantity</td>
+                            <td style="text-align: center">@item.UnitName</td>
                         </tr>
                     }
                 </table>
