--- a/KGERP/Views/WareHouse/WarehousePOReceivingSlave.cshtml
+++ b/KGERP/Views/WareHouse/WarehousePOReceivingSlave.cshtml
@@ -225,7 +225,7 @@
                                                 <th class="center">Total Received</th>
                                                 <th>Return Quantity</th>
                                                 <th class="center">Remaining Quantity</th>
-
+                                                <th class="center">Unit Name</th>
                                             </tr>
                                         </thead>
                                         @{
@@ -242,6 +242,7 @@
                                                     <td>@item.PriviousReceivedQuantity</td>
                                                     <td>@item.ReturnQuantity</td>
                                                     <td>@item.RemainingQuantity</td>
+                                                    <td>@item.UnitName</td>
                                                 </tr>
                                             }
                                         </tbody>
