--- a/KGERP/Views/WareHouse/WarehousePurchaseReturnSlave.cshtml
+++ b/KGERP/Views/WareHouse/WarehousePurchaseReturnSlave.cshtml
@@ -189,6 +189,7 @@
                                                 <th>SL</th>
                                                 <th class="center">Material/Item Name </th>
                                                 <th class="center">Return Quantity</th>
+                                                <th class="center">Unit</th>
                                                 <th class="center">Rate</th>
                                                 <th class="center">Total Amount</th>
                                                 @*<th class="center">Remaining Quantity</th>*@
@@ -204,6 +205,7 @@
                                                 <tr>
                                                     <td>@(++sl)</td>
                                                     <td>@item.ProductName</td>
+                                                    <td>@item.UnitName</td>
                                                     <td>@item.ReturnQuantity</td>
                                                     <td>@item.Rate</td>
                                                     <td>@item.Total</td>
@@ -377,7 +379,7 @@
                 var id = $('#ddlPo').find(":selected").val();
                 $.ajax({
                     type: "POST",
-                    url: "@Url.Action("ProcurementPurchaseOrderDetails", "WareHouse")",
+                    url: "@Url.Action("ProcurementPurchaseOrderDetails", "Warehouse")",
                     datatype: "Json",
                     data: { id: id },
                     success: function (data) {
@@ -394,7 +396,7 @@
 
                   $.ajax({
                     type: "GET",
-                    url: "@Url.Action("GetExistingChallanListByPO", "WareHouse")",
+                    url: "@Url.Action("GetExistingChallanListByPO", "Warehouse")",
                       datatype: "Json",
                       data: { id: id },
                       success: function (Response) {
