--- a/KGERP/Views/Quotation/QuotationSubmit.cshtml
+++ b/KGERP/Views/Quotation/QuotationSubmit.cshtml
@@ -1,4 +1,4 @@
-﻿@model KGERP.Service.ServiceModel.QuotationSubmitModel
+﻿@model KGERP.Service.ServiceModel.QuotationSubmitMasterModel
 @using KGERP.Utility;
 
 @{
@@ -48,7 +48,7 @@
             <div class="box">
                 <div class="box-danger">
                     <div class="box-body">
-                        @if (Model.QuotationSubmitId > 0)
+                        @if (Model.QuotationSubmitMasterId > 0)
                         {
                             <div class="row mb-5">
                                 <div class="col-md-1"> </div>
@@ -65,7 +65,6 @@
                                                 @Model.SupplierName
                                             </td>
                                         </tr>
-
 
                                         <tr>
                                             <th style="width:17% !important">Quotation No</th>
@@ -85,7 +84,7 @@
                         }
                         else
                         {
-                            using (Html.BeginForm("QuotationSubmit", "Quotation", FormMethod.Post, new { id = "quotationSubmitFormId", @class = "formValidator" }))
+                            using (Html.BeginForm("QuotationSubmitMaster", "Quotation", FormMethod.Post, new { id = "quotationSubmitFormId", @class = "formValidator" }))
                             {
                                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyId" })
                                 <div class="row">
@@ -101,16 +100,16 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label class="form-label">Quotation Type<sup class="text-danger" title="Required">*</sup></label>
-                                            @Html.DropDownListFor(model => model.QuotationForId, Model.QuotationTypeList as SelectList, "==Quotation Type==", new { id = "ddlQuotationType", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
-                                            @Html.ValidationMessageFor(model => model.QuotationForId, "", new { @class = "text-danger" })
+                                            @Html.DropDownListFor(model => model.QuotationTypeId, Model.QuotationTypeList as SelectList, "==Quotation Type==", new { id = "ddlQuotationType", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
+                                            @Html.ValidationMessageFor(model => model.QuotationTypeId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label class="form-label">Quotation For<sup class="text-danger" title="Required">*</sup></label>
-                                            @Html.DropDownListFor(model => model.QuotationMasterId, Model.QuotationForList as SelectList, "==Quotation For==", new { id = "ddlQuotationFor", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
-                                            @Html.ValidationMessageFor(model => model.QuotationMasterId, "", new { @class = "text-danger" })
+                                            @Html.DropDownListFor(model => model.QuotationForId, Model.QuotationForList as SelectList, "==Quotation For==", new { id = "ddlQuotationFor", @class = "form-control ddlReset searchingDropdown", style = "width:100%", required = "required" })
+                                            @Html.ValidationMessageFor(model => model.QuotationForId, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
