--- a/KGERP/Views/Quotation/QuotationSubmit.cshtml
+++ b/KGERP/Views/Quotation/QuotationSubmit.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Quotation Submit";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int sl = 0;
 }
 
 <style type="text/css">
@@ -57,9 +58,9 @@
                                         <tr>
                                             <th>Submission Date</th>
                                             <th>:</th>
-                                            <td>@Model.QuotationSubmitMaster.SubmissionDate</td>
+                                            <td>@Model.QuotationSubmitMaster.SubmissionDate.ToString("dd/MM/yyyy")</td>
 
-                                            <th>Supplier/Party Name</th>
+                                            <th>Supplier Name</th>
                                             <th>:</th>
                                             <td>
                                                 @Model.QuotationSubmitMaster.SupplierName
@@ -81,6 +82,94 @@
                                 </div>
                                 <div class="col-md-1"> </div>
                             </div>
+
+                            if (true)
+                            {
+                                using (Html.BeginForm("QuotationSubmitDetail", "Quotation", FormMethod.Post, new { id = "QuotationSubmitDetailFormId", @class = "formValidator" }))
+                                {
+                                    if (Model.QuotationDetailModelList?.Any() ?? false)
+                                    {
+                                        <div class="table-wrapper">
+                                            <table class="table table-responsive table-bordered table-striped table-fixed">
+                                                <thead>
+                                                    <tr class="bg-gray">
+                                                        <th style="text-align: center !important">SL</th>
+                                                        <th style="text-align: center !important">Material Name</th>
+                                                        <th style="text-align: center !important">Quality</th>
+                                                        <th style="text-align: center !important">Quantity</th>
+                                                        <th style="text-align: center !important">Unit Price</th>
+                                                        <th style="text-align: center !important">Total Amount</th>
+                                                    </tr>
+                                                </thead>
+
+                                                <tbody>
+                                                    @{
+                                                        int i = 0;
+                                                    }
+                                                    @foreach (var item in Model.QuotationDetailModelList)
+                                                    {
+                                                        @Html.HiddenFor(model => model.QuotationSubmitMasterId)
+                                                        <tr>
+                                                            <td style="text-align: center !important">@(++sl)</td>
+                                                            <td>
+                                                                @item.MaterialName
+                                                                @Html.HiddenFor(model => model.QuotationDetailModelList[i].MaterialId)
+                                                            </td>
+                                                            <td style="text-align: center !important">@Enum.GetName(typeof(EnumMaterialQuality), item.MaterialQualityId)</td>
+                                                            <td>
+                                                                @Html.TextBoxFor(model => model.QuotationDetailModelList[i].Quantity, new { value = "0", @class = "form-control demandValue", required = "true", @readonly = "true" })
+                                                                @Html.ValidationMessageFor(model => model.QuotationDetailModelList[i].Quantity, "", new { @class = "text-danger" })
+                                                            </td>
+                                                            <td>
+                                                                @Html.TextBoxFor(model => model.QuotationDetailModelList[i].UnitPrice, new { value = "0", @class = "form-control demandValue", required = "true" })
+                                                                @Html.ValidationMessageFor(model => model.QuotationDetailModelList[i].UnitPrice, "", new { @class = "text-danger" })
+                                                            </td>
+                                                            <td style="text-align: right !important">
+                                                                12.200
+                                                            </td>
+                                                        </tr>
+
+                                                        i++;
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        if (true)
+                                        {
+                                            <div class="box-footer">
+                                                <div class="row">
+                                                    <div class="col-md-3"></div>
+                                                    <div class="col-md-3"></div>
+                                                    <div class="col-md-3"></div>
+                                                    <div class="col-md-3">
+                                                        <a class="btn btn-primary btn-block linkPointer" data-toggle="modal" data-target="#ApprovedModalId" data-placement="top">Proceed to Submit Quotation</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <!-- Approve Modal-->
+                                            <div class="modal fade" id="ApprovedModalId" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+                                                <div class="modal-dialog">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                                                                &times;
+                                                            </button>
+                                                            <h4 class="modal-title text-primary"><b>Submit Quotation</b></h4>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            Do you want to submit the Quotation?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-outline-warning" data-dismiss="modal">Go Back</button>
+                                                            <button type="submit" id="btnDelete" class="deleteId btn btn-success">Submit</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+                                    }
+                                }
+                            }
                         }
                         else
                         {
