--- a/KGERP/Views/Quotation/ComparativeStatement.cshtml
+++ b/KGERP/Views/Quotation/ComparativeStatement.cshtml
@@ -1,9 +1,9 @@
-﻿@model KGERP.Service.ServiceModel.QuotationCompareModel
+﻿@model KGERP.Service.ServiceModel.ComparativeStatementModel
 @{
     ViewData["Title"] = "Comparative Statement";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
-    KGERP.Service.ServiceModel.QuotationCompareModel searchData = TempData["CompareModel"] as KGERP.Service.ServiceModel.QuotationCompareModel;
+    KGERP.Service.ServiceModel.ComparativeStatementModel temData = TempData["TempModel"] as KGERP.Service.ServiceModel.ComparativeStatementModel;
 }
 
 <style type="text/css">
@@ -48,24 +48,17 @@
             <div class="box">
                 <div class="box-danger">
                     <div class="box-body">
-                        @using (Html.BeginForm("CompareQuotation", "Quotation", FormMethod.Post, new { id = "BRMasterListFormId", @class = "formValidator" }))
+                        @using (Html.BeginForm("ComparativeStatement", "Quotation", FormMethod.Post, new { id = "BRMasterListFormId", @class = "formValidator" }))
                         {
                             @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyId" })
 
                             <div class="row">
+                                <div class="col-md-2"></div>
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label class="form-label">Select Quotation<sup class="text-danger" title="Required">*</sup></label>
-                                        @Html.DropDownListFor(model => model.QuotationIdOne, Model.QuotationList as SelectList, "==Search Quotation==", new { id = "ddlQuotationIdOne", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
-                                        @Html.ValidationMessageFor(model => model.QuotationIdOne, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label class="form-label">Another Quotation<sup class="text-danger" title="Required">*</sup></label>
-                                        @Html.DropDownListFor(model => model.QuotationIdTwo, Model.QuotationList as SelectList, "==Search Quotation==", new { id = "ddlQuotationIdTwo", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
-                                        @Html.ValidationMessageFor(model => model.QuotationIdTwo, "", new { @class = "text-danger" })
+                                        @Html.DropDownListFor(model => model.QuotationMasterId, Model.QuotationList as SelectList, "==Search Quotation==", new { id = "ddlQuotationIdOne", @class = "form-control searchingDropdown", style = "width:100%", required = "required" })
+                                        @Html.ValidationMessageFor(model => model.QuotationMasterId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
 
@@ -75,61 +68,39 @@
                                         <button type="submit" id="btnSave" class="btn btn-primary btn-block">Genearate Statement</button>
                                     </div>
                                 </div>
+                                <div class="col-md-2"></div>
                             </div>
                         }
 
-                        @if (searchData != null)
+                        @if (temData != null)
                         {
                             <hr />
                             <div class="table-responsive" style="margin: 50px 0;">
-                                <table class="table-bordered" style="width: 100%; border-bottom: 0px solid black !important;">
-                                    <tr>
-                                        <td colspan="2">
-                                            <h3 style="text-align: center; text-transform: uppercase; color: gray; font-weight: bold;">Comparative Statement</h3>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        @foreach (var item in searchData.QuotationMasterModel)
+                                @foreach (var group in temData.QuotationSubmitDetailModelList.GroupBy(q => q.SupplierId).ToList())
+                                {
+                                    <table class="table-bordered" style="width: 100%; border-bottom: 0px solid black !important;">
+                                        <caption>Vendor Name: @(group.FirstOrDefault()?.SupplierName ?? "N/A")</caption>
+                                        <tr>
+                                            <th>Material Name</th>
+                                            <th>Quantity</th>
+                                            <th>Unit Price</th>
+                                            <th>Total Amount</th>
+                                        </tr>
+                                        @foreach (var item in group)
                                         {
-                                            <td>
-                                                <div style="padding: 15px 7px;">
-                                                    <b>Quotation No: </b>@item.QuotationNo
-                                                    <br />
-                                                    <b>Quotation Name: </b>@item.QuotationForName
-                                                    <br />
-                                                    <b>Quotation Date: </b>@item.QuotationDate.ToString("dd/MM/yyyy")
-                                                    <br />
-                                                    @*<b>Supplier Name: </b>@item.SupplierName*@
-                                                </div>
-
-                                                <table class="table table-bordered" style="margin: 0 !important;">
-                                                    <tr>
-                                                        <th style="width: 25% !important;">Material Name</th>
-                                                        <th style="width: 25% !important;">Quality</th>
-                                                        <th style="width: 25% !important;">Quantity</th>
-                                                        <th style="width: 25% !important;">Unit Rate</th>
-                                                        <th style="width: 25% !important;">Total</th>
-                                                    </tr>
-                                                    @foreach (var detail in item.DetailDataList)
-                                                    {
-                                                        <tr>
-                                                            <td style="width: 25% !important;">@detail.MaterialName</td>
-                                                            <td style="width: 25% !important;">@Enum.GetName(typeof(KGERP.Utility.EnumMaterialQuality), detail.MaterialQualityId)</td>
-                                                            <td style="width: 25% !important;">@detail.Quantity</td>
-                                                            <td style="width: 25% !important;">@detail.UnitPrice</td>
-                                                            <td style="width: 25% !important;">@detail.TotalAmount</td>
-                                                        </tr>
-                                                    }
-                                                </table>
-                                            </td>
+                                            <tr>
+                                                <td>@item.MaterialName</td>
+                                                <td>@item.Quantity</td>
+                                                <td>@item.UnitPrice</td>
+                                                <td>@item.TotalAmount</td>
+                                            </tr>
                                         }
-                                    </tr>
-                                </table>
-                                <div style="margin-top: 20px; text-align:right">
-                                    <button class="btn btn-primary" onclick="PrintStatement()">Print Statement</button>
-                                </div>
+                                    </table>
+                                }
                             </div>
                         }
+
+
 
                     </div>
                 </div>
